# simple-server-analytics

./: Cargo.toml
simple-server-analytics/: Cargo.toml
simple-server-analytics-db/: Cargo.toml
simple-server-analytics-db/migrations/: 20230922205344_init.sql
simple-server-analytics-db/src/: human_readable_duration.rs  lib.rs
simple-server-analytics-web-client/: package.json
simple-server-analytics/src/: lib.rs  salvo_ext.rs
simple-server-analytics/src/salvo_ext/: handler.rs  listener.rs  service.rs
src/: lib.rs  salvo_ext.rs
src/salvo_ext/: listener.rs  service.rs
