[package]
edition = "2021"
name = "simple-server-analytics"
version = "0.0.1"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
derive_more = "0"
pin-project = "1"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0", features = [
    "chrono",
    "runtime-tokio-rustls",
    "sqlite",
] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = "0"
tracing = "0"

salvo = { workspace = true }
simple-id = { workspace = true }

simple-server-analytics-db = { path = "../simple-server-analytics-db" }
